--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <div class="cartao">
             <h1>Luiz Felipe de Camargo</h1>
             <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
-            <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-            <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"></i></a>
+            <div class="icones">
+                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"></i></a>
+            </div>
         </div>
     </div>
 </body>
