--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
 </head>
 <body>
+    <nav>
+        <div class="abas">Artigos Científicos</div>
+        <div class="abas">Artigos de Opinião</div>
+        <div class="abas">Materiais Didáticos</div>
+    </nav>
     <div class="fundo">
         <div class="cartao">
             <h1>Luiz Felipe de Camargo</h1>
             <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
             <div class="icones">
-                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"></i></a>
+                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square" title="Facebook"></i></a>
+                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram" title="Instagram"></i></a>
+                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
+                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square" title="GitHub"></i></a>
+                <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank"><image class="icone_lattes" src="lattes.png" title="Currículo Lattes"></i></a>
             </div>
         </div>
     </div>
