--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank"><image class="icone_lattes" src="lattes.png" title="Currículo Lattes"></i></a>
             </div>
         </div>
+        <div class="imagens">
+            <image src="imagem1.jpg"/>
+            <image src="imagem2.jpg"/>
+            <image src="imagem3.jpg"/>
+        </div>
     </div>
 </body>
 </html>
