--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -9,29 +10,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
 </head>
+
 <body>
-    <nav>
-        <div class="abas">Artigos Científicos</div>
-        <div class="abas">Artigos de Opinião</div>
-        <div class="abas">Materiais Didáticos</div>
-    </nav>
     <div class="fundo">
-        <div class="cartao">
-            <h1>Luiz Felipe de Camargo</h1>
-            <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
+        <div class="topo">
+            <div class="identificacao">
+                <h1>Luiz Felipe de Camargo</h1>
+                <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
+            </div>
             <div class="icones">
-                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square" title="Facebook"></i></a>
-                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram" title="Instagram"></i></a>
-                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
-                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square" title="GitHub"></i></a>
-                <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank"><image class="icone_lattes" src="lattes.png" title="Currículo Lattes"></i></a>
+                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square"
+                        title="Facebook"></i></a>
+                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram"
+                        title="Instagram"></i></a>
+                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank"
+                    title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
+                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"
+                        title="GitHub"></i></a>
+                <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
+                    <image class="icone_lattes" src="lattes.png" title="Currículo Lattes"></i>
+                </a>
             </div>
         </div>
+        <div class="menu">
+            <div class="abas"><a>Artigos Científicos</a></div>
+            <div class="abas"><a>Artigos de Opinião</a></div>
+            <div class="abas"><a>Materiais Didáticos</a></div>
+        </div>
         <div class="imagens">
-            <image src="imagem1.jpg"/>
-            <image src="imagem2.jpg"/>
-            <image src="imagem3.jpg"/>
+            <image src="imagem1.jpg" />
+            <image src="imagem2.jpg" />
+            <image src="imagem3.jpg" />
         </div>
     </div>
 </body>
+
 </html>
