--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"
                         title="GitHub"></i></a>
                 <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
-                    <image class="icone_lattes" src="lattes.png" title="Currículo Lattes"></i>
+                    <image class="icone_lattes" src="lattes_w.png" title="Currículo Lattes"></i>
                 </a>
             </div>
         </div>
