--- a/sobre.html
+++ b/sobre.html
@@ -39,10 +39,7 @@
             <div class="abas"><a>Artigos de Opinião</a></div>
             <div class="abas"><a>Materiais Didáticos</a></div>
         </div>
-        <div class="imagens">
-            <image src="imagem1.jpg" />
-            <image src="imagem2.jpg" />
-            <image src="imagem3.jpg" />
+            Sobre
         </div>
     </div>
 </body>
