--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Luiz Felipe de Camargo</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,8 +28,10 @@
                     title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
                 <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"
                         title="GitHub"></i></a>
-                <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
-                    <image class="icone_lattes" src="lattes_w.png" title="Currículo Lattes"></i>
+                <!--<a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
+                    <image class="icone_lattes" src="lattes_w.png" title="Currículo Lattes"></i>-->
+                <a href="mailto://camargo.luizfelipe@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+                            title="E-mail"></i></a>
                 </a>
             </div>
         </div>
