--- a/artigos_opiniao.html
+++ b/artigos_opiniao.html
@@ -43,20 +43,28 @@
             <div class="abas"><a>Materiais Didáticos</a></div>
         </div>
         <div class="principal">
-            <h3>Sobre</h3>
-            <p>Possui graduação em Sistema de Informação pela Universidade Estadual Paulista Júlio de Mesquita Filho -
-                Unesp (2015), especialização em Segurança da Informação na Universidade do Sagrado Coração - USC (2017)
-                e mestrado em Ciência da Computação na Unesp (2019), atualmente é doutorando em Ciência da Computação na
-                Unesp tendo como área de pesquisa Visualização da Informação aplicada ao Monitoramento de Redes.</p>
-            <p>Atualmente é assistente na Diretoria Técnica de Informática (DTI) da Faculdade de Medicina de Botucatu
-                (FMB) - Unesp, atuando desde 2011 na gestão da área de manutenção de equipamentos e suporte ao usuário,
-                bem como no auxílio às tarefas ligadas à gestão e administração da diretoria.</p>
-            <p>Atua também como estagiário docente nos cursos de graduação em Sistemas da Informação e Ciência da
-                Computação da Unesp, ministrando as disciplinas de Redes de Computadores e Projeto de Redes de
-                Computadores.</p>
-            <p>Tem experiência na área de Ciência da Computação em geral, com ênfase nas áreas de hardware, gestão de
-                parque tecnológico, desenvolvimento para web, visualização da informação, design de interfaces e redes.
-            </p>
+            <h3>Artigos de Opinião</h3>
+            <a class="artigo" href="https://www.linkedin.com/pulse/abnega%C3%A7%C3%A3o-ou-sobre-servir-luiz-felipe-de-camargo/" target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_opiniao_3.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Abnegação ou sobre servir</p>
+                    <p>Pensamentos sobre a função do professor e o servir ao próximo.</p>
+                </div>
+            </a>
+            <a class="artigo" href="https://www.linkedin.com/pulse/ead-funciona-agora-vai-ter-que-funcionar-luiz-felipe-de-camargo/" target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_opiniao_2.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">EAD funciona? Agora vai ter que funcionar!</p>
+                    <p>Reflexão sobre ensino à distância e o cenário de aumento do uso durante a quarentena.</p>
+                </div>
+            </a>
+            <a class="artigo" href="https://www.linkedin.com/pulse/para-onde-covid-19-vai-nos-levar-luiz-felipe-de-camargo/" target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_opiniao_1.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Para onde a COVID-19 vai nos levar?</p>
+                    <p>Breve reflexão no começo da quarentena, sobre as mudanças na relação das pessoas com a tecnlogia que a quarentena está causando.</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
