--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"
                         title="GitHub"></i></a>
                 <!--<a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
-                    <image class="icone_lattes" src="lattes_w.png" title="Currículo Lattes"></i>-->
-                <a href="mailto://camargo.luizfelipe@gmail.com" target="_blank"><i class="fa fa-envelope-square"
+                    <image class="icone_lattes" src="imagens/lattes_w.png" title="Currículo Lattes"></i>-->
+                <a href="mailto:camargo.luizfelipe@gmail.com" target="_blank"><i class="fa fa-envelope-square"
                             title="E-mail"></i></a>
                 </a>
             </div>
@@ -38,14 +38,14 @@
         <div class="menu">
             <div class="abas"><a href="index.html">Início</a></div>
             <div class="abas"><a href="sobre.html">Sobre</a></div>
+            <div class="abas"><a href="artigos_opiniao.html">Artigos de Opinião</a></div>
             <div class="abas"><a>Artigos Científicos</a></div>
-            <div class="abas"><a>Artigos de Opinião</a></div>
             <div class="abas"><a>Materiais Didáticos</a></div>
         </div>
         <div class="imagens">
-            <image src="imagem1.jpg" />
-            <image src="imagem2.jpg" />
-            <image src="imagem3.jpg" />
+            <image src="imagens/imagem1.jpg" />
+            <image src="imagens/imagem2.jpg" />
+            <image src="imagens/imagem3.jpg" />
         </div>
     </div>
 </body>
