--- a/artigos_opiniao.html
+++ b/artigos_opiniao.html
@@ -39,8 +39,9 @@
             <div class="abas"><a href="index.html">Início</a></div>
             <div class="abas"><a href="sobre.html">Sobre</a></div>
             <div class="abas"><a href="artigos_opiniao.html">Artigos de Opinião</a></div>
-            <div class="abas"><a>Artigos Científicos</a></div>
-            <div class="abas"><a>Materiais Didáticos</a></div>
+            <div class="abas"><a href="artigos_cientificos.html">Artigos Científicos</a></div>
+            <div class="abas"><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">Currículo Lattes</a></div>
+            <!--<div class="abas"><a>Materiais Didáticos</a></div>-->
         </div>
         <div class="principal">
             <h3>Artigos de Opinião</h3>
