--- a/artigos_cientificos.html
+++ b/artigos_cientificos.html
@@ -44,21 +44,43 @@
             <!--<div class="abas"><a>Materiais Didáticos</a></div>-->
         </div>
         <div class="principal">
-            <h3>Sobre - Luiz Felipe de Camargo</h3>
-            <image class="perfil" src="imagens/perfil.jpg"/>
-            <p>Possui graduação em Sistema de Informação pela Universidade Estadual Paulista Júlio de Mesquita Filho -
-                Unesp (2015), especialização em Segurança da Informação na Universidade do Sagrado Coração - USC (2017)
-                e mestrado em Ciência da Computação na Unesp (2019), atualmente é doutorando em Ciência da Computação na
-                Unesp tendo como área de pesquisa Visualização da Informação aplicada ao Monitoramento de Redes.</p>
-            <p>Atualmente é assistente na Diretoria Técnica de Informática (DTI) da Faculdade de Medicina de Botucatu
-                (FMB) - Unesp, atuando desde 2011 na gestão da área de manutenção de equipamentos e suporte ao usuário,
-                bem como no auxílio às tarefas ligadas à gestão e administração da diretoria.</p>
-            <p>Atua também como estagiário docente nos cursos de graduação em Sistemas da Informação e Ciência da
-                Computação da Unesp, ministrando as disciplinas de Redes de Computadores e Projeto de Redes de
-                Computadores.</p>
-            <p>Tem experiência na área de Ciência da Computação em geral, com ênfase nas áreas de hardware, gestão de
-                parque tecnológico, desenvolvimento para web, visualização da informação, design de interfaces e redes.
-            </p>
+            <h3>Artigos Científicos</h3>
+            <a class="artigo" href="pdfs/wppgcc_2018.pdf " target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_cientifico_4.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Visualização da Informações Aplicada à Segurança de Redes de Computadores: Um Estudo de Caso da Rede sem Fio da Unesp</p>
+                    <p>Autores: Luiz Felipe de Camargo, José Remo Brega Ferreira e Diego Roberto Colombo Dias</p>
+                    <p>Evento: VIII Workshop do Programa de Pós-Graduação em Ciência da Computação - UNESP</p>
+                    <p>Ano: 2018</p>
+                </div>
+            </a>
+            <a class="artigo" href="pdfs/wppgcc_2017.pdf " target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_cientifico_3.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Utilização da Visualização da Informação Aplicada à Segurança de Redes</p>
+                    <p>Autores: Luiz Felipe de Camargo, José Remo Brega Ferreira e Diego Roberto Colombo Dias</p>
+                    <p>Evento: VII Workshop do Programa de Pós-Graduação em Ciência da Computação - UNESP</p>
+                    <p>Ano: 2017</p>
+                </div>
+            </a>
+            <a class="artigo" href="pdfs/unitoledo_2017.pdf " target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_cientifico_2.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Monitoramento Visual de Servidor de Impressão</p>
+                    <p>Autores: Luiz Felipe de Camargo e José Remo Brega Ferreira</p>
+                    <p>Periódico: Revista Empreenda UniToledo Gestão, Tecnologia e Gastronomia</p>
+                    <p>Ano: 2017</p>
+                </div>
+            </a>
+            <a class="artigo" href="pdfs/ciaca_2017.pdf " target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_cientifico_1.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Análise de ferramentas para monitoramento de redes: aspectos de segurança e visualização da informação</p>
+                    <p>Autores: Luiz Felipe de Camargo, Kelton Augusto Pontara Costa e José Remo Brega Ferreira</p>
+                    <p>Evento: 5ª Conferência Ibero Americana Computação Aplicada 2017</p>
+                    <p>Ano: 2017</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
