--- a/artigos_opiniao.html
+++ b/artigos_opiniao.html
@@ -45,6 +45,13 @@
         </div>
         <div class="principal">
             <h3>Artigos de Opinião</h3>
+            <a class="artigo" href="https://www.linkedin.com/pulse/quando-pandemia-acaba-luiz-felipe-de-camargo/" target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_opiniao_4.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Quando a pandemia acaba?</p>
+                    <p>Reflexões sobre o momento atual que vivemos.</p>
+                </div>
+            </a>
             <a class="artigo" href="https://www.linkedin.com/pulse/abnega%C3%A7%C3%A3o-ou-sobre-servir-luiz-felipe-de-camargo/" target="_blank">
                 <image class="miniatura_artigo" src="imagens/artigo_opiniao_3.jpeg"/>
                 <div class="texto_artigo">
