--- a/topo.html
+++ b/topo.html
@@ -1,3 +1,8 @@
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
+</head>
+
 <div class="identificacao">
     <h1>Luiz Felipe de Camargo</h1>
     <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
