--- a/noticias.html
+++ b/noticias.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="fundo">
-        <div w3-include-html="topo.html"></div>
+        <div class="topo" w3-include-html="topo.html"></div>
         <div class="menu">
             <div class="abas"><a href="index.html">Início</a></div>
             <div class="abas"><a href="sobre.html">Sobre</a></div>
