--- a/artigos_opiniao.html
+++ b/artigos_opiniao.html
@@ -14,35 +14,8 @@
 
 <body>
     <div class="fundo">
-        <div class="topo">
-            <div class="identificacao">
-                <h1>Luiz Felipe de Camargo</h1>
-                <h2>Analista de Sistemas, Estudante, Pesquisador e Professor</h2>
-            </div>
-            <div class="icones">
-                <a href="https://www.facebook.com/luizfcharry" target="_blank"><i class="fa fa-facebook-square"
-                        title="Facebook"></i></a>
-                <a href="https://www.instagram.com/luizfcharry" target="_blank"><i class="fa fa-instagram"
-                        title="Instagram"></i></a>
-                <a href="https://www.linkedin.com/in/luiz-felipe-de-camargo-972108118/" target="_blank"
-                    title="LinkedIn"><i class="fa fa-linkedin-square"></i></a>
-                <a href="http://github.com/luizfcharry" target="_blank"><i class="fa fa-github-square"
-                        title="GitHub"></i></a>
-                <!--<a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">
-                    <image class="icone_lattes" src="lattes_w.png" title="Currículo Lattes"></i>-->
-                <a href="mailto:camargo.luizfelipe@gmail.com" target="_blank"><i class="fa fa-envelope-square"
-                        title="E-mail"></i></a>
-                </a>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="abas"><a href="index.html">Início</a></div>
-            <div class="abas"><a href="sobre.html">Sobre</a></div>
-            <div class="abas"><a href="artigos_opiniao.html">Artigos de Opinião</a></div>
-            <div class="abas"><a href="artigos_cientificos.html">Artigos Científicos</a></div>
-            <div class="abas"><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">Currículo Lattes</a></div>
-            <!--<div class="abas"><a>Materiais Didáticos</a></div>-->
-        </div>
+        <div class="topo" w3-include-html="topo.html"></div>
+        <div class="menu" w3-include-html="menu.html"></div>
         <div class="principal">
             <h3>Artigos de Opinião</h3>
             <a class="artigo" href="https://www.linkedin.com/pulse/quando-pandemia-acaba-luiz-felipe-de-camargo/" target="_blank">
