--- a/noticias.html
+++ b/noticias.html
@@ -12,19 +12,10 @@
     <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
     <script src="scripts/w3.js"></script>
 </head>
-
 <body>
     <div class="fundo">
         <div class="topo" w3-include-html="topo.html"></div>
-        <div class="menu">
-            <div class="abas"><a href="index.html">Início</a></div>
-            <div class="abas"><a href="sobre.html">Sobre</a></div>
-            <div class="abas"><a href="artigos_opiniao.html">Artigos de Opinião</a></div>
-            <div class="abas"><a href="artigos_cientificos.html">Artigos Científicos</a></div>
-            <div class="abas"><a href="noticias.html">Notícias</a></div>
-            <div class="abas"><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K8492218P0" target="_blank">Currículo Lattes</a></div>
-            <!--<div class="abas"><a>Materiais Didáticos</a></div>-->
-        </div>
+        <div class="menu" w3-include-html="menu.html"></div>
         <div class="principal">
             <h3>Notícias</h3>
             <a class="artigo" href="https://olhardigital.com.br/noticia/tse-vai-testar-sistema-de-voto-online-pelo-celular-ou-computador/108549" target="_blank">
