--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='estilos.css'>
+    <script src="scripts/w3.js"></script>
 </head>
 
 <body>
