--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <image src="imagens/imagem3.jpg" />
         </div>
     </div>
+    <script>
+        w3.includeHTML();
+    </script>
 </body>
 
 </html>
