--- a/artigos_cientificos.html
+++ b/artigos_cientificos.html
@@ -19,11 +19,20 @@
         <div class="menu" w3-include-html="menu.html"></div>
         <div class="principal">
             <h3>Artigos Científicos</h3>
+            <a class="artigo" href="https://link.springer.com/chapter/10.1007/978-3-030-58802-1_4" target="_blank">
+                <image class="miniatura_artigo" src="imagens/artigo_cientifico_5.jpeg"/>
+                <div class="texto_artigo">
+                    <p class="titulo_artigo">Information Visualization Applied to Computer Network Security</p>
+                    <p>Autores: Luiz Felipe de Camargo, Alessandro Moraes, Diego Roberto Colombo Dias e José Remo Brega Ferreira</p>
+                    <p>Evento: The 20th International Conference on Computational Science and Its Applications - ICCSA 2020</p>
+                    <p>Ano: 2020</p>
+                </div>
+            </a>
             <a class="artigo" href="pdfs/wppgcc_2018.pdf " target="_blank">
                 <image class="miniatura_artigo" src="imagens/artigo_cientifico_4.jpeg"/>
                 <div class="texto_artigo">
                     <p class="titulo_artigo">Visualização da Informações Aplicada à Segurança de Redes de Computadores: Um Estudo de Caso da Rede sem Fio da Unesp</p>
-                    <p>Autores: Luiz Felipe de Camargo, José Remo Brega Ferreira e Diego Roberto Colombo Dias</p>
+                    <p>Autores: Luiz Felipe de Camargo, Diego Roberto Colombo Dias e José Remo Brega Ferreira</p>
                     <p>Evento: VIII Workshop do Programa de Pós-Graduação em Ciência da Computação - UNESP</p>
                     <p>Ano: 2018</p>
                 </div>
@@ -32,7 +41,7 @@
                 <image class="miniatura_artigo" src="imagens/artigo_cientifico_3.jpeg"/>
                 <div class="texto_artigo">
                     <p class="titulo_artigo">Utilização da Visualização da Informação Aplicada à Segurança de Redes</p>
-                    <p>Autores: Luiz Felipe de Camargo, José Remo Brega Ferreira e Diego Roberto Colombo Dias</p>
+                    <p>Autores: Luiz Felipe de Camargo, Diego Roberto Colombo Dias e José Remo Brega Ferreira</p>
                     <p>Evento: VII Workshop do Programa de Pós-Graduação em Ciência da Computação - UNESP</p>
                     <p>Ano: 2017</p>
                 </div>
