--- a/artigos_cientificos.html
+++ b/artigos_cientificos.html
@@ -25,7 +25,7 @@
                     <p class="titulo_artigo">Information Visualization Applied to Computer Network Security</p>
                     <p>Autores: Luiz Felipe de Camargo, Alessandro Moraes, Diego Roberto Colombo Dias e José Remo Brega Ferreira</p>
                     <p>Evento: The 20th International Conference on Computational Science and Its Applications - ICCSA 2020</p>
-                    <p>Ano: 2020</p>
+                    <p>Ano: 2020 - 2</p>
                 </div>
             </a>
             <a class="artigo" href="pdfs/wppgcc_2018.pdf " target="_blank">
